adding a script to print a greeting

--- a/week_7/js_example.html
+++ b/week_7/js_example.html
@@ -9,5 +9,10 @@
 <body>
     <p>Person 1: Scott</p>
     <script src="scripts/update_person.js"></script>
+
+    <div>
+        <p id="dynamic">Click Here</p>
+        <script src="scripts/print_greeting.js"></script>
+    </div>
 </body>
 </html>
